--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ build/
 dist/
 *.pyc
 *.egg-info
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
